--- a/src/scss/fluid-email/layout/_sub-col.scss
+++ b/src/scss/fluid-email/layout/_sub-col.scss
@@ -21,11 +21,5 @@
     }
   }
   
-  @extend %sub-col;
   width: percentage($column / $cols);
-}
-
-%sub-col {
-  font-size: 16px; // restore font-size
-  letter-spacing: 0; // restore letter-spacing
 }
